--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <base href="/">
-    <link rel="icon" type="image/png" href="/google.png" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google</title>
     <!-- Add this to your index.html in the public folder -->
